# mongolink

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: code_quality.yml
src/api/: generic_api.py
src/common/: collection_controller.py  mongo_connection.py
src/common/models/: base_model.py  user.py
src/common/models/beanie/: base_document.py
src/config/settings/: connection.py
