[tool.poetry]
name = "mongo link"
version = "0.1.0"
description = "Api for mongo operations using FastAPI"
authors = ["Maor Bar"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.112.1"
uvicorn = "^0.22.0"
beanie = "^1.10.0"  # Add Beanie for ODM with MongoDB
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.4.0"
email-validator = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pre-commit = "^3.8.0"
black = "^24.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"